# deep_research_agent_from_scratch

./: README.md  main.py  pyproject.toml
.langgraph_api/: .langgraph_ops.pckl
notebooks/: 2_research_agent.ipynb  3_research_agent_mcp.ipynb  4_research_supervisor.ipynb  5_full_agent.ipynb  scoping.ipynb
src/deep_research_from_scratch/: research_agent_scope.py  utils.py
